@@ -5,6 +5,7 @@ Version 1.2.1 - 15.1.2018 17:27
 
   * fix SIGSEGV - gui threads conflict
   * fix window cache settings
+  * min size of editor and preview when both widgets are visible
 
 Version 1.2.0 - 26.10.2017 19:40
 
